--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="intro" id="intro">
     <header class="header">
         <div class="header__inner">
-            <a href="/">
+            <a href="/" class="logo">
                 <img class="logo__img" src="./src/images/logo.svg" alt="Car sharing logo">
                 <span class="logo__text logo__text--primary">Car</span>
                 <span class="logo__text">Sharing</span>
