--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat.</p>
         <div class="hero__wrapper">
-            <a href="" class="hero__btn hero__btn--primary">SHARE A CAR</a>
-            <a href="" class="hero__btn">KEY FEATURES</a>
+            <a href="" class="hero__btn hero__btn--primary btn btn--primary">SHARE A CAR</a>
+            <a href="" class="hero__btn btn">KEY FEATURES</a>
 
         </div>
-        <a href="" class="hero__btn hero__btn--icon"></a>
-    </section>
 
+    </section>
+    <a href="" class="intro__scroll btn btn--primary btn--icon">
+        <svg xmlns="http://www.w3.org/2000/svg" width="21.077" height="21.624" viewBox="0 0 21.077 21.624"><path class="icon-arrow" d="M20.062,11.444l1.071,1.071a1.154,1.154,0,0,1,0,1.636l-9.378,9.382a1.154,1.154,0,0,1-1.636,0L.738,14.152a1.154,1.154,0,0,1,0-1.636l1.071-1.071a1.16,1.16,0,0,1,1.655.019l5.541,5.816V3.408A1.156,1.156,0,0,1,10.163,2.25h1.544a1.156,1.156,0,0,1,1.158,1.158V17.279l5.541-5.816a1.151,1.151,0,0,1,1.655-.019Z" transform="translate(-0.397 -2.25)"/></svg>
+    </a>
 </div>
 
 </body>
