form html structure

--- a/index.html
+++ b/index.html
@@ -114,6 +114,30 @@
             </div>
         </div>
     </section>
+    <section class="box">
+        <div class="box__inner">
+            <h2 class="hdl">CONTACT</h2>
+            <div class="cols">
+                <img class="formPhoto" src="./src/images/formphoto.png" alt="Form Photo">
+                <form class="contactForm">
+                    <input type="text" class="contactForm__input" placeholder="Type your name">
+                    <input type="email" class="contactForm__input" placeholder="Type your e-mail">
+                    <textarea cols="30" rows="10" placeholder="Type your message"></textarea>
+                    <div class="contactForm__group">
+                        <label for="agreement">I hereby give consent for my personal data included in my application to
+                            be processed for the purposes of the recruitment process under the European Parliament's and
+                            Council of the European Union Regulation on the Protection of Natural Persons as of 27 April
+                            2016, with regard to the processing of personal data and on the free movement of such data,
+                            and repealing Directive 95/46/EC (Data Protection Directive)</label>
+                        <input type="checkbox" id="agreement">
+                    </div>
+                    <input type="submit" value="Send" class="btn btn--sm btn--outline">
+                </form>
+            </div>
+        </div>
+    </section>
+
+
 </main>
 
 
